Items refactoring, added more items to db
