# routes/desserts.js
@@ -1,7 +1,0 @@
-const express = require("express");
-const router = express.Router();
-const { listDesserts } = require("../controllers/desserts");
-
-router.route("/").get(listDesserts);
-
-module.exports = router;
