# routes/homeCombos.js
@@ -1,7 +1,0 @@
-const express = require("express");
-const router = express.Router();
-const { listHomeCombos } = require("../controllers/homeCombos");
-
-router.route("/").get(listHomeCombos);
-
-module.exports = router;
