# routes/pizzas.js
@@ -1,7 +1,0 @@
-const express = require("express");
-const router = express.Router();
-const { listPizzas } = require("../controllers/pizzas");
-
-router.route("/").get(listPizzas);
-
-module.exports = router;
